--- a/src/styles/css/heroAdaptive.css
+++ b/src/styles/css/heroAdaptive.css
@@ -7,6 +7,10 @@
     margin-left: 9px;
     margin-top: 102px;
   }
+  #hero .hero__img__ambulance__car {
+    width: 444px;
+    margin-top: 50px;
+  }
   @keyframes ambulanceKey {
     from {
       margin-left: 900px;
@@ -14,6 +18,17 @@
     to {
       margin-left: 9px;
     }
+  }
+  .flasher {
+    margin-left: 133px;
+    margin-top: 54px;
+    width: 142px;
+  }
+  .Flasher2 {
+    width: 60px;
+  }
+  .Flasher {
+    width: 50px;
   }
   #hero .hero__img__circle {
     width: 435px;
@@ -82,6 +97,11 @@
     width: 321px;
     margin-left: -75px;
   }
+  #hero .hero__img__ambulance__car {
+    width: 261px;
+    margin-left: 23px;
+    margin-top: 112px;
+  }
   @keyframes ambulanceKey {
     from {
       margin-left: 900px;
@@ -90,10 +110,16 @@
       margin-left: -75px;
     }
   }
+  .flasher {
+    margin-left: 100px;
+    margin-top: 110px;
+    width: 86px;
+  }
   #hero .hero__img__circle {
-    width: 300px;
-    height: 300px;
+    width: 265px;
+    height: 265px;
     margin-left: -18px;
+    margin-top: 157px;
   }
   #connection .connection__our__pro {
     /* width: 53px; */
@@ -126,7 +152,10 @@
     background: url("../img/Rectangle 9.png") no-repeat center/cover;
   }
   #hero .hero__img__circle {
-    display: none;
+    width: 300px;
+    height: 300px;
+    margin-left: -226px;
+    margin-top: 247px;
   }
   #hero .hero__title__btn {
     margin: 250px 0 50px 0;
@@ -137,6 +166,11 @@
     margin-left: -285px;
     margin-top: 108px;
   }
+  #hero .hero__img__ambulance__car {
+    width: 327px;
+    margin-left: -57px;
+    margin-top: 172px;
+  }
   @keyframes ambulanceKey {
     from {
       margin-left: 900px;
@@ -145,19 +179,24 @@
       margin-left: -285px;
     }
   }
+  .flasher {
+    margin-left: 35px;
+    margin-top: 169px;
+    width: 121px;
+  }
   #footer .footer {
     flex-direction: column;
   }
 }
 @media (max-width: 540px) {
   .container {
-    padding: 49px;
+    padding: 0 49px 0 49px;
   }
 }
 @media (max-width: 450px) {
   .container {
     overflow: hidden;
-    padding: 40px;
+    padding: 0 40px 0 40px;
   }
   #card .card__MinCard__cards {
     display: none;
@@ -176,6 +215,10 @@
   }
   #hero .hero__img__ambulance {
     margin-top: 145px;
+  }
+  #hero .hero__img__circle {
+    margin-left: -188px;
+    margin-top: 280px;
   }
   #hero .hero__title__btn {
     margin: 304px 0 50px 0;
@@ -202,11 +245,15 @@
     align-items: center;
     justify-content: center;
   }
+  #hero .hero__img__circle {
+    margin-left: 0;
+    margin-top: -415px;
+  }
   #hero .hero__title__row {
     margin-left: 62px;
   }
   #hero .hero__title__btn {
-    margin: 309px 0 50px 63px;
+    margin: 315px 0 25px 63px;
   }
   #hero .hero__img__ambulance {
     position: relative;
@@ -249,6 +296,12 @@
   .container {
     padding: 35px;
   }
+  #hero .hero__img__ambulance__car {
+    margin-left: -23px;
+  }
+  .flasher {
+    margin-left: 67px;
+  }
 }
 @media (max-width: 375px) {
   .container {
@@ -258,6 +311,25 @@
 @media (max-width: 360px) {
   .container {
     padding: 32px;
+  }
+  #hero .hero__img__ambulance__car {
+    width: 286px;
+    margin-left: -16px;
+    margin-top: 172px;
+  }
+  .flasher {
+    margin-left: 64px;
+    width: 107px;
+  }
+  .Flasher {
+    width: 40px;
+  }
+  .Flasher2 {
+    width: 48px;
+  }
+  #hero .hero__img__circle {
+    width: 270px;
+    height: 270px;
   }
 }
 @media (max-width: 320px) {
