--- a/src/styles/heroAdaptive.scss
+++ b/src/styles/heroAdaptive.scss
@@ -79,7 +79,6 @@
     padding: 10px;
   }
 }
-
 @media (max-width: 768px) {
 .Modal{
   display: block;
@@ -249,6 +248,11 @@ display: none;
     position: relative;
   }
 }
+@media (max-width: 428px) {
+  #hero .hero__img__circle {
+    margin-left: -243px;
+  }
+}
 @media (max-width: 425px) {
 
   #hero .hero {
@@ -282,6 +286,9 @@ display: none;
       }
     }
   }
+  #hero .hero__img__ambulance__car {
+     margin-left: -27px;
+   }
   #card .card__Title {
     font-size: 15px;
     text-align: center;
